setting open ai 2

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,8 +3,7 @@ SERVER_PORT: 8011
 ACTIVE_PROFILE: dev
 
 #OPENAI
-OPEN_AI_KEY: ${OPENAI_API_KEY}
-
+#OPEN_AI_KEY: ${OPENAI_API_KEY}
 
 #DATASOURSE
 MYSQL_USER: root
@@ -14,7 +13,6 @@ MYSQL_URL: jdbc:mysql://${HOST_SERVER}:${MYSQL_PORT_MAPPER}/${MYSQL_DATABASE}
 MYSQL_PORT: 3306
 MYSQL_PORT_MAPPER: 3066
 DB_HOST: localhost
-
 
 #EMAIL CONFIG
 EMAIL_HOST: localhost
