--- a/.env
+++ b/.env
@@ -32,4 +32,4 @@ CUSTOMER_ORDER_URL= http://${HOST_SERVER}=${ANGULAR_PORT}/service/customer-invoi
 ORIGIN= http://localhost:8011/api/v1/manager-app
 
 # OpenAI API Key
-OPENAI_API_KEY=todo
+# OPENAI_API_KEY=todo
