--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </scm>
     <properties>
         <java.version>17</java.version>
-        <spring-ai.version>1.0.0</spring-ai.version>
+<!--        <spring-ai.version>1.0.0</spring-ai.version>-->
     </properties>
 
 
@@ -168,10 +168,10 @@
         <!--        Mail-->
 
         <!--        Open AI-->
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-starter-model-openai</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.ai</groupId>-->
+        <!--            <artifactId>spring-ai-starter-model-openai</artifactId>-->
+        <!--        </dependency>-->
         <!--        Open AI-->
 
         <!--        TEST DEPENCY-->
