--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,25 @@
         </dependency>
         <!--        Open AI-->
 
+
+
+        <!--     QR CODE   -->
+        <dependency>
+            <groupId>dev.samstevens.totp</groupId>
+            <artifactId>totp</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+        <!--        QR CODE-->
+
+        <!--        USER AGENT-->
+        <dependency>
+            <groupId>nl.basjes.parse.useragent</groupId>
+            <artifactId>yauaa</artifactId>
+            <version>7.29.0</version>
+        </dependency>
+        <!--        END USER AGENT-->
+
+
         <!--        TEST DEPENCY-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
